Add support for composite DTOs
This allows a single DTO to be loaded from/saved to multiple tables, with the aid of intermediate "entity"-like DTOs (since Litebridge internally expects one or more DTOs per table, not the other way around).
It is an optional "mapper" support steps outside of the main Litebridge API, but required some inner tweaking to get right.